--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <h1>aiman college trichy app service</h1>
+    <h1>Bharathithasan university</h1>
   </main>
 </body>
 
